[package]
name = "zeuz_node_native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
isahc = { version = "1.7.2", features = ["http2", "static-curl", "static-ssl", "text-decoding", "json", "cookies"] }
serde = { version = "1.0.163", features = ["default", "derive"] }
serde_json = { version = "1.0.96", features = ["std", "preserve_order"] }
form-data-builder = "1.0.1"
url_encoded_data = "0.6.1"
thiserror = "1.0.40"
