[package]
name = "lorust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
isahc = { version = "1.7.2", features = ["http2", "static-curl", "static-ssl", "text-decoding", "json", "cookies"] }
serde = { version = "1.0.215", features = ["default", "derive"] }
serde_json = { version = "1.0.133", features = ["std", "preserve_order"] }
form-data-builder = "1.0.1"
url_encoded_data = "0.6.1"
thiserror = "1.0.69"
async-recursion = "1.0.4"
rustpython-vm = { version = "0.4.0", features = ["serde"] }
rustpython-stdlib = "0.4.0"
futures = "0.3.31"
parking_lot = "0.12.3"
chrono = "0.4.39"
regex = "1.11.1"
clap = { version = "4.5.23", features = ["derive"] }
